--- a/Web Scraper/The Beautiful Soup Ingredients/task-info.yaml
+++ b/Web Scraper/The Beautiful Soup Ingredients/task-info.yaml
@@ -74,5 +74,8 @@ files:
     \ == '__main__':\n    WebScraperTest().run_tests()\n"
   learner_created: false
 feedback_link: https://hyperskill.org/projects/145/stages/782/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Tue, 29 Jun 2021 02:32:05 UTC
 record: -1
