--- a/Web Scraper/What the File?/task-info.yaml
+++ b/Web Scraper/What the File?/task-info.yaml
@@ -60,6 +60,12 @@ files:
     if __name__ == '__main__':
         WebScraperTest().run_tests()
   learner_created: false
+- name: source.html
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/145/stages/783/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Tue, 29 Jun 2021 06:21:44 UTC
 record: -1
