--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/455321/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Thu, 01 Jan 1970 00:00:00 UTC
+update_date: Wed, 30 Jun 2021 01:21:54 UTC
 stages:
 - id: 781
   step: 11755
@@ -19,7 +19,7 @@ stages:
   is_completed: true
 - id: 785
   step: 11759
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: World Wide Web
